@@ -1,3 +1,9 @@
+2010-01-26  Vincent Celier  <celier@adacore.com>
+
+	* switch-c.adb (Scan_Front_End_Switches): Take into account options
+	that follow -gnatef.
+	Allow -gnateG to be followed by other options.
+
 2010-01-26  Robert Dewar  <dewar@adacore.com>
 
 	* s-commun.ads, s-osprim-mingw.adb, s-stchop-vxworks.adb, sem_aggr.adb,
